--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.8.5",
+    "@babylonjs/gui": "^8.8.5",
+    "@babylonjs/gui-editor": "^8.8.5",
+    "@babylonjs/havok": "^1.3.10",
+    "@babylonjs/inspector": "^8.8.5",
+    "@babylonjs/loaders": "^8.8.5",
+    "@babylonjs/materials": "^8.8.5",
+    "@babylonjs/post-processes": "^8.8.5",
+    "@babylonjs/serializers": "^8.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
@@ -24,6 +34,8 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-glsl": "^1.3.3",
+    "vite-plugin-html": "^3.2.2"
   }
 }
