--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "yarn@4.9.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -19,6 +20,11 @@
     "@babylonjs/materials": "^8.8.5",
     "@babylonjs/post-processes": "^8.8.5",
     "@babylonjs/serializers": "^8.8.5",
+    "@mantine/core": "8.0.2",
+    "@mantine/hooks": "8.0.2",
+    "@mantine/vanilla-extract": "8.0.2",
+    "@tabler/icons-react": "^3.33.0",
+    "@vanilla-extract/css": "^1.17.1",
     "earcut": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
@@ -28,11 +34,15 @@
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vanilla-extract/vite-plugin": "^5.0.3",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "postcss-preset-mantine": "1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
