--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
     "@babylonjs/core": "^8.8.5",
-    "@babylonjs/gui": "^8.8.5",
-    "@babylonjs/gui-editor": "^8.8.5",
     "@babylonjs/havok": "^1.3.10",
     "@babylonjs/inspector": "^8.8.5",
-    "@babylonjs/materials": "^8.8.5",
     "@mantine/core": "8.0.2",
     "@mantine/hooks": "8.0.2",
     "@mantine/vanilla-extract": "8.0.2",
@@ -27,14 +25,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vanilla-extract/vite-plugin": "^5.0.3",
-    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^9.25.0",
+    "eslint-plugin-react-dom": "^1.50.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-x": "^1.50.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "1.17.0",
@@ -42,7 +41,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vite-plugin-glsl": "^1.3.3",
     "vite-plugin-html": "^3.2.2"
   }
 }
