--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vanilla-extract/vite-plugin": "^5.0.3",
-    "@vitejs/plugin-react": "^4.5.0",
+    "@vitejs/plugin-react-swc": "^3.10.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-dom": "^1.50.0",
     "eslint-plugin-react-hooks": "^5.2.0",
