--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@tabler/icons-react": "^3.33.0",
     "@vanilla-extract/css": "^1.17.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
