--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vanilla-extract/css": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-json-view": "^1.21.3",
     "zod": "^3.25.67"
   },
   "devDependencies": {
