--- a/package.json
+++ b/package.json
@@ -13,38 +13,39 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@babylonjs/core": "^8.8.5",
+    "@babylonjs/core": "^8.36.1",
     "@babylonjs/havok": "^1.3.10",
-    "@babylonjs/inspector": "^8.8.5",
-    "@mantine/core": "8.0.2",
-    "@mantine/hooks": "8.0.2",
-    "@mantine/vanilla-extract": "8.0.2",
-    "@tabler/icons-react": "^3.33.0",
-    "@vanilla-extract/css": "^1.17.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "zod": "^3.25.67"
+    "@babylonjs/inspector": "^8.36.1",
+    "@babylonjs/materials": "^8.36.1",
+    "@mantine/core": "8.3.7",
+    "@mantine/hooks": "8.3.7",
+    "@mantine/vanilla-extract": "8.3.7",
+    "@tabler/icons-react": "^3.35.0",
+    "@vanilla-extract/css": "^1.17.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vanilla-extract/vite-plugin": "^5.0.3",
-    "@vitejs/plugin-react": "^4.6.0",
-    "@vitejs/plugin-react-swc": "^3.10.0",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-dom": "^1.50.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-react-x": "^1.50.0",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "postcss-preset-mantine": "1.17.0",
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitejs/plugin-react-swc": "^4.2.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-dom": "^2.3.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-react-x": "^2.3.1",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.3",
+    "vite": "^7.2.2",
     "vite-plugin-html": "^3.2.2",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.8"
   }
 }
